--- a/DesignerRHN/DesignerRHN-war/web/PruebasUnitariasComponentes.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/PruebasUnitariasComponentes.xhtml
@@ -3,56 +3,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
     </h:head>
-    <h:body> 
+    <h:body>
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:growl id="growl" showDetail="true"/>
-                    <p:panel  id="PanelTotal" header="Prueba" style="position: absolute; width: 874px; height: 510px; text-align: left" >  
 
-
-
-
-
-                        <p:tabView  styleClass="tabViewPrincipal" style="text-orientation: initial;list-style: circle; " >
-                            <p:tab title="----------------------------1----------------------------">
-                                <p:selectOneRadio id="pruebaActivo" style="position: absolute; top: 50px; left: 20px" value="#{controlPruebasUnitarias.numeroBtnPrueba}">
-                                    <f:selectItem itemLabel="Visible" itemValue="1" />
-                                    <f:selectItem itemLabel="No Visible" itemValue="2" />
-                                    <p:ajax event="change" listener="#{controlPruebasUnitarias.cambioBtnPrueba()}" process="@this"/>
-                                </p:selectOneRadio>  
-
-                                <p:scrollPanel id="panelPrueba" style="position: absolute; top: 100px; left: 20px">
-                                    <h:inputText/>
-                                    <h:inputText/>
-                                    <h:inputText/>
-                                    <h:inputText/>
-                                    <h:inputText/>
-
-                                </p:scrollPanel>
-                            </p:tab>
-                            <p:tab title="2">
-                                <p:selectOneRadio id="pruebaActivo2" style="position: absolute; top: 50px; left: 20px" value="#{controlPruebasUnitarias.numeroBtnPrueba}">
-                                    <f:selectItem itemLabel="Visible" itemValue="1" />
-                                    <f:selectItem itemLabel="No Visible" itemValue="2" />
-                                    <p:ajax event="change" listener="#{controlPruebasUnitarias.cambioBtnPrueba()}" process="@this"/>
-                                </p:selectOneRadio>  
-
-                                <p:scrollPanel id="panelPrueba2" style="position: absolute; top: 100px; left: 20px">
-                                    <h:inputText/>
-                                    <h:inputText/>
-                                    <h:inputText/>
-                                </p:scrollPanel>
-                            </p:tab>
-                        </p:tabView>
-
-                    </p:panel>
                 </h:form>
-
             </ui:define>
         </ui:composition>
     </h:body>
